@@ -1,5 +1,8 @@
 Version 1.5.3+svn:
  * Campaigns:
+ * Editor2:
+   * rotate clipboard 60 deg. cw/ccw, ctrl+r/ctrl+shift+r respectively
+     (cmd instead of ctrl on Mac). Active in the "paste" mode.
  * Language and i18n:
    * updated translations:
 
